cicd/cd/platform/manifests/base/coralogix-demo-create-order-audit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coralogix-demo-create-order-audit
  namespace: OVERLOADED_DURING_KUSTOMIZATION
  labels:
    app: coralogix-demo-create-order-audit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coralogix-demo-create-order-audit
  template:
    metadata:
      labels:
        app: coralogix-demo-create-order-audit
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - api
      containers:
        - name: OVERLOADED_DURING_KUSTOMIZATION
          image: OVERLOADED_DURING_KUSTOMIZATION
          ports:
            - containerPort: 8089
          resources:
            limits:
              cpu: 200m # 1 CPU core = 1000m
              memory: 768Mi # 256 megabytes, 512 megabytes, 768 megabytes, 1024 megabytes
            requests:
              cpu: 100m # 0.75 CPU cores = 750m
              memory: 256Mi # 256 megabytes, 512 megabytes, 768 megabytes, 1024 megabytes
---
apiVersion: v1
kind: Service
metadata:
  name: coralogix-demo-create-order-audit
  namespace: OVERLOADED_DURING_KUSTOMIZATION
spec:
  selector:
    app: coralogix-demo-create-order-audit
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
  type: ClusterIP
